opagatekeeper-policy/podselectors/assets/deployment-violation.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
        name: allow-ingress
        namespace: backend
        labels:
                type: policy

spec:
        podSelector:
                matchLabels:
                        access: admin
        policyTypes:
                - Ingress
        ingress: []
