opagatekeeper-policy/podselectors/assets/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenylabel
spec:
  crd:
    spec:
      names:
        kind: K8sDenyLabel
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenylabel 
        violation [{"msg": msg}] {
          #input.review.object.metadata.namespace == "backend"                      #Checks if the namespace is "backend"
          #input.review.object.podSelector.matchLabels.access == "admin"            #Checks if the access label is "admin"
          #msg := "You are not allowed to apply any network policies to the pod." } #Deny message
